<resources>
    <string name="app_name">FoodOrderAssignment</string>

    <string name="re_enter_password">Re-enter Password</string>
    <string name="password">Password</string>
    <string name="email_id">Email Id</string>
    <string name="name">Name</string>
    <string name="registration">Registration</string>
    <string name="title">Title</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="register">Register</string>
    <string name="do_you_have_an_account_please_login_here">Do you have an account? Please Login here..</string>
    <string name="check_out">Check Out</string>
    <string name="quantity">Quantity</string>
    <string name="food_image">Food Image</string>
    <string name="_0">0</string>
    <string name="_100_00">100.00</string>
    <string name="meal">Meal</string>
    <string name="food_name">Food name</string>
    <string name="welcome">Welcome....</string>
    <string name="order_details">Order Details</string>
    <string name="total_amount">Total Amount</string>
    <string name="tax_amount">Tax Amount</string>
    <string name="grand_total">Grand Total</string>
    <string name="place_order">Place Order</string>
</resources>