<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="#97999B">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:background="#E4E6E9"
        android:padding="5dp"
        android:weightSum="2">

        <ImageView
            android:id="@+id/image"
            android:layout_width="0dp"
            android:layout_height="130dp"
            android:layout_weight="0.7"
            android:src="@drawable/food"
            android:scaleType="centerCrop"
            android:contentDescription="@string/food_image"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="130dp"
            android:layout_marginStart="0dp"
            android:layout_weight="1.3"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/food_name"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/meal"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_100_00"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:gravity="center"
                    android:text="@string/quantity"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/minusItem"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="0dp"
                    android:backgroundTint="@color/white"
                    android:contentDescription="@string/food_image"
                    android:src="@drawable/round_clear_24" />

                <TextView
                    android:id="@+id/quantity"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="0dp"
                    android:gravity="center"
                    android:text="@string/_0"
                    android:textAlignment="center" />

                <ImageButton
                    android:id="@+id/addItem"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="0dp"
                    android:backgroundTint="@color/white"
                    android:contentDescription="@string/food_image"
                    android:src="@drawable/round_add_24" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>