<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="activity"
            type="com.niveus.kiran.foodorderassignment.views.RegistrationActivity" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.SignUpActivity">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/title"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/registration"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/name"
            app:layout_constraintStart_toStartOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="340dp"
            android:layout_height="48dp"
            android:layout_marginEnd="40dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="340dp"
            android:layout_height="48dp"
            android:layout_marginEnd="40dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/email_id"
            app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress"
            app:layout_constraintTop_toBottomOf="@+id/editTextName" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/password"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="340dp"
            android:layout_height="48dp"
            android:layout_marginEnd="40dp"
            android:ems="10"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/re_enter_password"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPassword2"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

        <EditText
            android:id="@+id/editTextTextPassword2"
            android:layout_width="340dp"
            android:layout_height="48dp"
            android:layout_marginEnd="40dp"
            android:ems="10"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView11"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/mobile_number"
            app:layout_constraintStart_toStartOf="@+id/editTextPhone"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="340dp"
            android:layout_height="48dp"
            android:layout_marginEnd="40dp"
            android:ems="10"
            android:inputType="phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView11" />

        <Button
            android:id="@+id/registrationBtn"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:layout_marginTop="50dp"
            android:text="@string/register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />

        <TextView
            android:id="@+id/toLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/do_you_have_an_account_please_login_here"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.507"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registrationBtn"
            app:layout_constraintVertical_bias="0.15" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>